@startuml
    skinparam backgroundcolor transparent
    set namespaceSeparator none
    hide circle
    hide empty fields
    hide empty methods

    game.renderer --> org.joml
    game.renderer --> game.engine
    game.renderer --> game.components
    game.util --> game.renderer
    game.util --> game.components
    game.components --> org.joml
    game.components --> game.engine
    game.components --> game.renderer
    game.components --> game.components.enums
    game.components --> com.google.gson
    game.components.interactives --> game.components
    game.components.interactives --> game.engine
    game.components.interactives --> org.joml
    game.scene --> game.components
    game.scene --> game.engine
    game.scene --> game.renderer
    game.engine --> org.joml
    game.engine --> game.observers
    game.engine --> game.renderer
    game.engine --> game.scene
    game.engine --> game.observers.events
    game.engine --> game.components
    game.engine --> imgui.gl3
    game.engine --> imgui.glfw
    game.engine --> game.editor
    game.engine --> com.google.gson
    game.observers --> game.engine
    game.observers --> game.observers.events
    game.editor --> org.joml
    game.editor --> game.engine
    game.editor --> game.renderer
    game.editor --> imgui

    ' Package links
    class "game.renderer" [[game/renderer/package-summary.html]] {
    }
    class "game.engine" [[game/engine/package-summary.html]] {
    }
    class "game.components" [[game/components/package-summary.html]] {
    }
    class "game.util" [[game/util/package-summary.html]] {
    }
    class "game.components.enums" [[game/components/enums/package-summary.html]] {
    }
    class "game.components.interactives" [[game/components/interactives/package-summary.html]] {
    }
    class "game.scene" [[game/scene/package-summary.html]] {
    }
    class "game.observers" [[game/observers/package-summary.html]] {
    }
    class "game.observers.events" [[game/observers/events/package-summary.html]] {
    }
    class "game.editor" [[game/editor/package-summary.html]] {
    }

    center footer UMLDoclet 2.1.0, PlantUML %version()
@enduml
